fix various layout issues
banner sizing, disappearing logo, overflowing titles on season pages, crowded buttons on detail ribbon

--- a/core/media.css
+++ b/core/media.css
@@ -71,7 +71,7 @@ MEDIA ITEM
 	position: static;
 	top: 0;
 	width: 100%;
-	height: var(--s-banner);
+	height: var(--s-banner) !important; /* uses !important to override media queries */
 	background-attachment: scroll;
 	background-position: center 20%;
 }
@@ -117,11 +117,6 @@ html:has(#itemDetailPage:not(.hide)) .backdropImage {
 	order: 99;
 }
 
-.detailRibbon {
-	background: var(--c-foreground-stark);
-	margin-top: 0 !important;
-}
-
 
 .layout-desktop .detailPagePrimaryContainer,
 .layout-desktop .detailPageContent {
@@ -158,7 +153,23 @@ html:has(#itemDetailPage:not(.hide)) .backdropImage {
 
 /* HEADER */
 
+.detailRibbon.detailRibbon {
+	background: var(--c-foreground-stark);
+	margin-top: 0 !important;
+	height: auto;
+	min-height: 7.2em;
+}
+
+.detailRibbon .nameContainer {
+	padding: 1.2em 0;
+}
+
+.detailRibbon .nameContainer a {
+	text-align: left;
+}
+
 .layout-desktop .detailLogo {
+	display: block !important; /* override default media queries */
 	z-index: 1;
 	left: var(--s-card-allowance);
 	width: calc(100% - var(--s-card-allowance) - var(--s-page-pad) - 2rem);
@@ -168,6 +179,18 @@ html:has(#itemDetailPage:not(.hide)) .backdropImage {
 }
 
 /* HEADER BUTTONS */
+
+@media (max-aspect-ratio: 1/1) {
+	.detailRibbon .mainDetailButtons {
+		flex-direction: column;
+		align-items: flex-start;
+	}
+
+	.detailButton::after {
+		position: static !important;
+		transform: none !important;
+	}
+}
 
 /* button text */
 .detailButton {
@@ -458,14 +481,6 @@ html:has(#itemDetailPage:not(.hide)) .backdropImage {
 	overflow: visible;
 	contain: initial;
 }
-
-/* .layout-desktop  #childrenCollapsible.verticalSection-extrabottompadding .listViewUserDataButtons {
-	opacity: 0;
-	transition: opacity .2s ease;
-}
-.layout-desktop  #childrenCollapsible.verticalSection-extrabottompadding .listItem:hover .listViewUserDataButtons {
-	opacity: 1;
-} */
 	
 /* descriptions */
 
